--- a/style.css
+++ b/style.css
@@ -1,104 +1,70 @@
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: aliceblue;
+    font-family: Arial, sans-serif;
+    background:#424c55;
     margin: 0;
     padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    transition: background 0.5s ease;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #fff;
+    max-width: 600px;
+    margin: 50px auto;
+    background-color: #f5edf0;
     padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-    transition: background-color 0.5s ease;
-}
-
-h2 {
-    color: #333;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 form {
-    display: flex;
-    flex-direction: column;
-    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 label {
-    margin-bottom: 5px;
-    color: #555;
+    display: block;
+    margin-bottom: 8px;
 }
 
 input {
+    width: 100%;
     padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid rgb(195, 226, 245);
-    border-radius: 5px;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
 
 button {
-    padding: 10px;
-    margin: 5px; /* Add margin for spacing */
-    background-color: #4caf50;
+    background-color: #137547;
     color: #fff;
+    padding: 10px 20px;
     border: none;
-    border-radius: 5px;
+    border-radius: 4px;
     cursor: pointer;
+    text-align: center;
 }
 
 button:hover {
     background-color: #45a049;
 }
 
-#appointments-list {
-    margin-top: 20px;
+ul {
+    list-style-type: none;
+    padding: 0;
 }
 
 li {
-    list-style: none;
-    background-color: #f9f9f9;
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    transition: background-color 0.3s ease;
+    margin-bottom: 8px;
 }
 
-li:hover {
-    background-color: #d3d3d3;
-}
-
-button.delete {
-    background-color: #ff5555;
+li button {
+    background-color: #d91e36;
     color: #fff;
+    padding: 5px 10px;
     border: none;
-    padding: 10px; /* Match padding with other buttons */
-    border-radius: 5px;
+    border-radius: 4px;
     cursor: pointer;
+    margin-left: 10px;
 }
 
-button.delete:hover {
-    background-color: #ff0000;
-}
-
-button.edit {
-    background-color: #2196F3;
-    color: #fff;
-    border: none;
-    padding: 10px; /* Match padding with other buttons */
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-button.edit:hover {
-    background-color: #0b7dda;
+li button:hover {
+    background-color: #cc0000;
 }
